[package]
name = "trillium-acme"
version = "0.1.0"
authors = ["Josh Triplett <josh@joshtriplett.org>"]
edition = "2021"
description = "Automatic HTTPS certificates for trillium.rs, via Let's Encrypt and ACME tls-alpn-01 challenges"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
keywords = ["trillium", "acme", "autocert", "https", "tls"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
futures-lite = "1.13.0"
rustls-acme = "0.7.7"
trillium = "0.2.11"
trillium-server-common = "0.4.5"

[dev-dependencies]
anyhow = "1.0.75"
rustls-pemfile = "1.0.3"
smol = "1.3.0"
tempfile = "3.8.1"
trillium-client = "0.4.5"
trillium-rustls = "0.4.0"
trillium-smol = "0.3.1"
