[package]
name = "trillium-acme"
version = "0.1.1"
authors = ["Josh Triplett <josh@joshtriplett.org>"]
edition = "2021"
description = "Automatic HTTPS certificates for trillium.rs, via Let's Encrypt and ACME tls-alpn-01 challenges"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshtriplett/trillium-acme"
keywords = ["trillium", "acme", "autocert", "https", "tls"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
futures-lite = "2.2.0"
rustls-acme = "0.7.7"
trillium = "0.2.13"
trillium-server-common = "0.4.7"

[dev-dependencies]
anyhow = "1.0.79"
rustls-pemfile = "1.0.4"
smol = "2.0.0"
tempfile = "3.9.0"
trillium-client = "0.5.2"
trillium-rustls = "0.4.2"
trillium-smol = "0.3.3"
