[package]
name = "trillium-acme"
version = "0.3.0"
authors = ["Josh Triplett <josh@joshtriplett.org>"]
edition = "2021"
description = "Automatic HTTPS certificates for trillium.rs, via Let's Encrypt and ACME tls-alpn-01 challenges"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshtriplett/trillium-acme"
keywords = ["trillium", "acme", "autocert", "https", "tls"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
futures-lite = "2.3.0"
rustls-acme = "0.10.1"
trillium = "0.2.20"
trillium-server-common = "0.5.2"

[dev-dependencies]
anyhow = "1.0.86"
rustls-pemfile = "2.1.2"
smol = "2.0.0"
tempfile = "3.10.1"
trillium-client = "0.6.2"
trillium-rustls = "0.8.0"
trillium-smol = "0.4.1"
